# tola

./: .gitignore  .ignore  Cargo.toml  README.md  default.nix  flake.nix
screenshots/: figure1.heic  figure2.heic  home.heic
src/: build.rs  builder.rs  cli.rs  config.rs  log.rs  main.rs  serve.rs  server.rs  utils.rs  watcher.rs
src/utils/: builder.rs  checker.rs  logger.rs  watcher.rs
templates/: normal.typ
utils/: main.typ
