[package]
name = "tola"
version = "0.4.1"
edition = "2024"
description = "A static site generator for typst-based blog"

documentation = "https://github.com/kawayww/tola"
homepage = "https://github.com/kawayww/tola"
repository = "https://github.com/kawayww/tola"

keywords = ["blog", "static", "typst", "ssg"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
anyhow = "1.0.98"
which = "8.0.0"
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
minify-html = "0.16.4"
notify = "8.0.0"
rayon = "1.10.0"
tokio = { version = "1.45.1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["fs"] }
